# Crackme

./: README.md  meson.build
001/: input.c  meson.build  validate.s
002/: build.sh  encrypt.c  generate_header  helper.s  main.c  meson.build  shell.asm
